<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.standings.StandingsFragment">

    <TextView
        android:id="@+id/lbl_league"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_league"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/spinner_league"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:padding="20dp"
        android:background="@drawable/field_outline"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@+id/lbl_league"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/lbl_standings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_standings"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_league"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/table_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_standings">

        <TextView
            android:id="@+id/tv_rank_table_header"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_logo_table_header"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/team_logo"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rank_table_header"
            app:layout_constraintStart_toEndOf="@+id/tv_rank_table_header"
            app:layout_constraintTop_toTopOf="@+id/tv_rank_table_header" />

        <TextView
            android:id="@+id/tv_team_table_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/team_name"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_logo_table_header"
            app:layout_constraintStart_toEndOf="@+id/iv_logo_table_header"
            app:layout_constraintTop_toTopOf="@+id/iv_logo_table_header" />

        <TextView
            android:id="@+id/tv_played_table_header"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:text="@string/lbl_played"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_win_table_header"
            app:layout_constraintEnd_toStartOf="@+id/tv_win_table_header"
            app:layout_constraintTop_toTopOf="@+id/tv_win_table_header" />

        <TextView
            android:id="@+id/tv_win_table_header"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:text="@string/lbl_win"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_draw_table_header"
            app:layout_constraintEnd_toStartOf="@+id/tv_draw_table_header"
            app:layout_constraintTop_toTopOf="@+id/tv_draw_table_header" />

        <TextView
            android:id="@+id/tv_draw_table_header"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:text="@string/lbl_draw"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_lose_table_header"
            app:layout_constraintEnd_toStartOf="@+id/tv_lose_table_header"
            app:layout_constraintTop_toTopOf="@+id/tv_lose_table_header" />

        <TextView
            android:id="@+id/tv_lose_table_header"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:text="@string/lbl_lose"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_goal_difference_table_header"
            app:layout_constraintEnd_toStartOf="@+id/tv_goal_difference_table_header"
            app:layout_constraintTop_toTopOf="@+id/tv_goal_difference_table_header" />

        <TextView
            android:id="@+id/tv_goal_difference_table_header"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:text="@string/lbl_goal_difference"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_points_table_header"
            app:layout_constraintEnd_toStartOf="@+id/tv_points_table_header"
            app:layout_constraintTop_toTopOf="@+id/tv_points_table_header" />

        <TextView
            android:id="@+id/tv_points_table_header"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:text="@string/lbl_points"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:barrierDirection="left"
            app:constraint_referenced_ids="tv_points_table_header,tv_win_table_header,tv_played_table_header,tv_draw_table_header,tv_goal_difference_table_header,tv_lose_table_header"
            tools:layout_editor_absoluteX="410dp"
            tools:layout_editor_absoluteY="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLeagueTable"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_header"
        tools:listitem="@layout/item_league_standings" />

    <ProgressBar
        android:id="@+id/progressBarLeagueTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_standings_none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:visibility="gone"
        android:text="@string/no_standings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_standings" />

</androidx.constraintlayout.widget.ConstraintLayout>